# test_task

./: Dockerfile  README.md  main.py  pyproject.toml
routers/: chatbot.py
static/: style.css
templates/: index.html
