[tool.poetry]
name = "test"
version = "0.1.0"
description = "FastAPI project for test"
authors = ["Vitalii-Mykhalchenko"]
license = "MTI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
textblob = "^0.18.0.post0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
